<resources>
    <string name="app_name">Hadila-Dev </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line_text_sample">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="multiline_text_sample">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="home_text_recently_added"><u>Last added problems.</u></string>
    <string name="home_text_collections">Collections</string>
    <string name="home_text_favourites">Favourites</string>
    <string name="empty_list">Haven\'t add anything</string>
    <string name="somthing_goes_wrong"><u>Somthing goes wrong!!</u></string>
    <string name="source_title_text">Title</string>
    <string name="source_text">Source</string>
    <string name="category_text">Category</string>
    <string name="forgotten_password_text"><u>Forgot Password?</u></string>
    <string name="sign_up_text"><u>Sign Up</u></string>
    <string name="button_to_add">button to add</string>
    <string name="favourites_icon">favourites icon</string>
    <string name="btn_create_user">Create User</string>
    <string name="home_text_categories">Categories</string>
    <string name="invalid_email">Email is invalid.(example@example.com)</string>
    <string name="invalid_password">Password length must be at least six character.</string>
    <string name="unmatched_password">Passwords must match</string>
    <string name="invalid_url">Invalid URL.</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="delete_all_data"><u>Delete All Data</u></string>
    <string name="bottom_text_home">Home</string>
    <string name="bottom_text_list">Problems</string>
    <string name="bottom_text_profile">Profile</string>
    <string name="bottom_text_categories">Categories</string>
    <string name="menu_home_more_logout">Logout</string>
    <string name="menu_home_more_settings">Settings</string>
    <string name="bottom_text_collections">Collections</string>
</resources>