<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fillViewport="true"
                android:filterTouchesWhenObscured="false"
                android:fitsSystemWindows="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_view_collections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">


                            <ImageView
                                android:id="@+id/iv_collections"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_card_home"
                                app:srcCompat="@drawable/ic_folder_tree" />

                            <TextView
                                android:id="@+id/tv_collections"
                                style="@style/CustomTextViewTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/home_text_collections" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_view_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">


                            <ImageView
                                android:id="@+id/iv_categories"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_card_home"
                                app:srcCompat="@drawable/ic_folder" />

                            <TextView
                                android:id="@+id/tv_categories"
                                style="@style/CustomTextViewTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/home_text_categories" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_view_favourites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="5dp">


                            <ImageView
                                android:id="@+id/iv_favourites"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_card_home"
                                android:contentDescription="@string/favourites_icon"
                                app:srcCompat="@drawable/ic_fav" />

                            <TextView

                                android:id="@+id/tv_favourites"
                                style="@style/CustomTextViewTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@string/home_text_favourites" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tv_recently_added"
                style="@style/CustomTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/home_text_recently_added"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pages" />


            <include
                android:id="@+id/included_progressbar"
                layout="@layout/rv_progressbar"
                app:layout_constraintBottom_toBottomOf="@+id/rv_problems"
                app:layout_constraintEnd_toEndOf="@+id/rv_problems"
                app:layout_constraintStart_toStartOf="@+id/rv_problems"
                app:layout_constraintTop_toBottomOf="@+id/tv_recently_added" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_problems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recently_added"
                tools:listitem="@layout/item_problem" />


<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/btn_floating_action"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="32dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:clickable="true"-->
<!--                android:contentDescription="@string/button_to_add"-->
<!--                android:focusable="true"-->
<!--                android:src="@drawable/ic_baseline_add_32"-->
<!--                app:backgroundTint="@color/beauty_bush"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->

<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/btn_route"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="32dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:clickable="true"-->
<!--                android:contentDescription="@string/button_to_add"-->
<!--                android:focusable="true"-->
<!--                android:src="@drawable/ic_arrow_right"-->
<!--                app:backgroundTint="@color/beauty_bush"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>
